refactor: some fixes